@@ -95,7 +95,7 @@ public class main {
         */
        
        computeEC1(coresExplicit, coresImplicit);
-       computeEC2(coresExplicit, coresImplicit);
+       //computeEC2(coresExplicit, coresImplicit);
      
    }
    
@@ -106,8 +106,6 @@ public class main {
    	   
 			System.out.println(coresExplicit.get(2).tasks.get(4).runnables.get(7).name);
 			System.out.println(coresExplicit.get(3).tasks.get(3).runnables.get(19).name);
-			System.out.println((int)coresExplicit.get(3).tasks.get(3).period+ " "+ coresExplicit.get(3).tasks.get(3).runnables.get(19).BCST+ " "+ coresExplicit.get(3).tasks.get(3).runnables.get(19).WCRT);
-
 			System.out.println(coresExplicit.get(2).tasks.get(0).runnables.get(8).name);
 
 			ExplicitCommunication E2E = new ExplicitCommunication(
@@ -117,12 +115,46 @@ public class main {
 			       			coresExplicit.get(2).tasks.get(0).responseTime);
 			      	
 			
+			System.out.println("EXPLICIT EC1");
+			System.out.println(coresExplicit.get(2).tasks.get(4).runnables.get(7).name +
+					"; Period: "+(int)coresExplicit.get(2).tasks.get(4).period +" | BCST: "+coresExplicit.get(2).tasks.get(4).runnables.get(7).BCST +" | WCRT: "+coresExplicit.get(2).tasks.get(4).runnables.get(7).WCRT);
+			
+			System.out.println(coresExplicit.get(3).tasks.get(3).runnables.get(19).name +
+					"; Period: "+(int)coresExplicit.get(3).tasks.get(3).period +" | BCST: "+coresExplicit.get(3).tasks.get(3).runnables.get(19).BCST +" | WCRT: "+coresExplicit.get(3).tasks.get(3).runnables.get(19).WCRT);
+			
+			System.out.println(coresExplicit.get(2).tasks.get(0).runnables.get(8).name +
+					"; Period: "+(int)coresExplicit.get(2).tasks.get(0).period +" | BCST: "+coresExplicit.get(2).tasks.get(0).runnables.get(8).BCST +" | WCRT: "+coresExplicit.get(2).tasks.get(0).runnables.get(8).WCRT+
+					" RT TASK: "+coresExplicit.get(2).tasks.get(0).responseTime);
+			
+
+			System.out.println("IMPLICIT EC1");
+
+			System.out.println(coresImplicit.get(2).tasks.get(4).runnables.get(8).name +
+					"; Period: "+(int)coresImplicit.get(2).tasks.get(4).period +" | BCST1_0: "+coresImplicit.get(2).tasks.get(4).runnables.getFirst().BCST +" | WCRT1_0: "+coresImplicit.get(2).tasks.get(4).runnables.getFirst().WCRT
+					+" | BCST1_last: "+ coresImplicit.get(2).tasks.get(4).runnables.getLast().BCST+ " | WCRT1_last: "+coresImplicit.get(2).tasks.get(4).runnables.getLast().WCRT);
+			
+			
+			System.out.println(coresImplicit.get(3).tasks.get(3).runnables.get(20).name +
+					"; Period: "+(int)coresImplicit.get(3).tasks.get(3).period +" | BCST1_0: "+coresImplicit.get(3).tasks.get(3).runnables.getFirst().BCST +" | WCRT1_0: "+coresImplicit.get(3).tasks.get(3).runnables.getFirst().WCRT
+					+" | BCST1_last: "+ coresImplicit.get(3).tasks.get(3).runnables.getLast().BCST+ " | WCRT1_last: "+coresImplicit.get(3).tasks.get(3).runnables.getLast().WCRT);
+			
+			
+			System.out.println(coresImplicit.get(2).tasks.get(0).runnables.get(10).name +
+					"; Period: "+(int)coresImplicit.get(2).tasks.get(0).period +" | BCST1_0: "+coresImplicit.get(2).tasks.get(0).runnables.getFirst().BCST +" | WCRT1_0: "+coresImplicit.get(2).tasks.get(0).runnables.getFirst().WCRT
+					+" | BCST1_last: "+ coresImplicit.get(2).tasks.get(0).runnables.getLast().BCST+ " | WCRT1_last: "+coresImplicit.get(2).tasks.get(0).runnables.getLast().WCRT);
+			
+			
 			ImplicitCommunication MCOP = new ImplicitCommunication(
-			       			(int)coresImplicit.get(2).tasks.get(4).period, coresImplicit.get(2).tasks.get(4).runnables.getFirst().BCST, coresImplicit.get(2).tasks.get(4).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(4).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(4).runnables.getLast().WCRT,
-			       			(int)coresImplicit.get(3).tasks.get(3).period, coresImplicit.get(3).tasks.get(3).runnables.getFirst().BCST, coresImplicit.get(3).tasks.get(3).runnables.getFirst().WCRT, coresImplicit.get(3).tasks.get(3).runnables.getLast().BCST, coresImplicit.get(3).tasks.get(3).runnables.getLast().WCRT,
-			       			(int)coresImplicit.get(2).tasks.get(0).period, coresImplicit.get(2).tasks.get(0).runnables.getFirst().BCST, coresImplicit.get(2).tasks.get(0).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(0).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(0).runnables.getLast().WCRT
+			       			(int)coresImplicit.get(2).tasks.get(4).period, coresImplicit.get(2).tasks.get(4).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(4).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(4).runnables.getLast().WCRT,
+			       			(int)coresImplicit.get(3).tasks.get(3).period, coresImplicit.get(3).tasks.get(3).runnables.getFirst().WCRT, coresImplicit.get(3).tasks.get(3).runnables.getLast().BCST, coresImplicit.get(3).tasks.get(3).runnables.getLast().WCRT,
+			       			(int)coresImplicit.get(2).tasks.get(0).period, coresImplicit.get(2).tasks.get(0).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(0).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(0).runnables.getLast().WCRT
 			       			);
-   	   
+			
+			//public LETCommunication (int Task1, int Task2, int Task3) {
+			 LETCommunication LET = new LETCommunication((int)coresImplicit.get(2).tasks.get(4).period,
+					 (int)coresImplicit.get(3).tasks.get(3).period,
+					 (int)coresImplicit.get(2).tasks.get(0).period);
+			 
              //ExplicitCommunication E2E = new ExplicitCommunication(800,9.844000928,24.272001184000004,2000,3.896001524,39.668002,50000,795.6880232479997,16354.920024780005,16981.936030792007);
              //ExplicitCommunication E2E = new ExplicitCommunication(800,11.210000986666667,20.22666765333333,2000,11.55000166666667,33.056668333333334,50000,677.3266867,12469.11002065,16935.212000000007);
              //ImplicitCommunication MCOP = new ImplicitCommunication(800,0,159.392,9.844,24.272,2000,0,266.468,101.028,323.2680000000001,50000,0, 13122.360000000004,1034.2160000000001,16981.936000000005);
@@ -137,6 +169,11 @@ public class main {
              MCOP.L2FCalculation();
              MCOP.L2LCalculation();
              MCOP.F2FCalculation();
+             
+             System.out.println("LET");
+             LET.L2FCalculation();
+             LET.L2LCalculation();
+             LET.F2FCalculation();
 
       }catch (IOException e) {
              System.out.println(e.getMessage());
@@ -156,16 +193,48 @@ public class main {
 			       			(int)coresExplicit.get(2).tasks.get(0).period, coresExplicit.get(2).tasks.get(0).runnables.get(3).BCST, coresExplicit.get(2).tasks.get(0).runnables.get(3).WCRT,
 			       			(int)coresExplicit.get(2).tasks.get(3).period, coresExplicit.get(2).tasks.get(3).runnables.get(36).BCST, coresExplicit.get(2).tasks.get(3).runnables.get(36).WCRT,
 			       			coresExplicit.get(2).tasks.get(3).responseTime);
-			      	
+			
+			System.out.println("EXPLICIT EC2");
+			System.out.println(coresExplicit.get(0).tasks.get(0).runnables.get(3).name +
+					"; Period: "+(int)coresExplicit.get(0).tasks.get(0).period +" | BCST: "+coresExplicit.get(0).tasks.get(0).runnables.get(3).BCST +" | WCRT: "+coresExplicit.get(0).tasks.get(0).runnables.get(3).WCRT);
+			
+			System.out.println(coresExplicit.get(2).tasks.get(0).runnables.get(3).name +
+					"; Period: "+(int)coresExplicit.get(2).tasks.get(0).period +" | BCST: "+coresExplicit.get(2).tasks.get(0).runnables.get(3).BCST +" | WCRT: "+coresExplicit.get(2).tasks.get(0).runnables.get(3).WCRT);
+			
+			System.out.println(coresExplicit.get(2).tasks.get(3).runnables.get(36).name +
+					"; Period: "+(int)coresExplicit.get(2).tasks.get(3).period +" | BCST: "+coresExplicit.get(2).tasks.get(3).runnables.get(36) +" | WCRT: "+coresExplicit.get(2).tasks.get(3).runnables.get(36).WCRT+
+					" RT TASK: "+coresExplicit.get(2).tasks.get(3).responseTime);
+			
+
+			System.out.println("IMPLICIT EC2");
+			System.out.println(coresImplicit.get(0).tasks.get(0).runnables.get(4).name +
+					"; Period: "+(int)coresImplicit.get(0).tasks.get(0).period +" | BCST1_0: "+coresImplicit.get(0).tasks.get(0).runnables.getFirst().BCST +" | WCRT1_0: "+coresImplicit.get(0).tasks.get(0).runnables.getFirst().WCRT
+					+" | BCST1_last: "+ coresImplicit.get(0).tasks.get(0).runnables.getLast().BCST+ " | WCRT1_last: "+coresImplicit.get(0).tasks.get(0).runnables.getLast().WCRT);
+			
+			
+			System.out.println(coresImplicit.get(2).tasks.get(0).runnables.get(4).name +
+					"; Period: "+(int)coresImplicit.get(2).tasks.get(0).period +" | BCST1_0: "+coresImplicit.get(2).tasks.get(0).runnables.getFirst().BCST +" | WCRT1_0: "+coresImplicit.get(2).tasks.get(0).runnables.getFirst().WCRT
+					+" | BCST1_last: "+ coresImplicit.get(2).tasks.get(0).runnables.getLast().BCST+ " | WCRT1_last: "+coresImplicit.get(2).tasks.get(0).runnables.getLast().WCRT);
+			
+			
+			System.out.println(coresImplicit.get(2).tasks.get(3).runnables.get(37).name +
+					"; Period: "+(int)coresImplicit.get(2).tasks.get(3).period +" | BCST1_0: "+coresImplicit.get(2).tasks.get(3).runnables.getFirst().BCST +" | WCRT1_0: "+coresImplicit.get(2).tasks.get(3).runnables.getFirst().WCRT
+					+" | BCST1_last: "+ coresImplicit.get(2).tasks.get(3).runnables.getLast().BCST+ " | WCRT1_last: "+coresImplicit.get(2).tasks.get(3).runnables.getLast().WCRT);
+			
+			
+
 			//public ImplicitCommunication (int Task1 , double BCST1_0, double WCRT1_0, double BCST1_last, double WCRT1_last, 
 			//		int Task2 , double BCST2_0, double WCRT2_0, double BCST2_last, double WCRT2_last, 
 			//		int Task3 , double BCST3_0, double WCRT3_0, double BCST3_last, double WCRT3_last) {
 			ImplicitCommunication MCOP = new ImplicitCommunication(
-			       			(int)coresImplicit.get(0).tasks.get(0).period, coresImplicit.get(0).tasks.get(0).runnables.getFirst().BCST, coresImplicit.get(0).tasks.get(0).runnables.getFirst().WCRT, coresImplicit.get(0).tasks.get(0).runnables.getLast().BCST, coresImplicit.get(0).tasks.get(0).runnables.getLast().WCRT,
-			       			(int)coresImplicit.get(2).tasks.get(0).period, coresImplicit.get(2).tasks.get(0).runnables.getFirst().BCST, coresImplicit.get(2).tasks.get(0).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(0).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(0).runnables.getLast().WCRT,
-			       			(int)coresImplicit.get(2).tasks.get(3).period, coresImplicit.get(2).tasks.get(3).runnables.getFirst().BCST, coresImplicit.get(2).tasks.get(3).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(3).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(3).runnables.getLast().WCRT
+			       			(int)coresImplicit.get(0).tasks.get(0).period, coresImplicit.get(0).tasks.get(0).runnables.getFirst().WCRT, coresImplicit.get(0).tasks.get(0).runnables.getLast().BCST, coresImplicit.get(0).tasks.get(0).runnables.getLast().WCRT,
+			       			(int)coresImplicit.get(2).tasks.get(0).period, coresImplicit.get(2).tasks.get(0).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(0).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(0).runnables.getLast().WCRT,
+			       			(int)coresImplicit.get(2).tasks.get(3).period, coresImplicit.get(2).tasks.get(3).runnables.getFirst().WCRT, coresImplicit.get(2).tasks.get(3).runnables.getLast().BCST, coresImplicit.get(2).tasks.get(3).runnables.getLast().WCRT
 			       			);
    	   
+			 LETCommunication LET = new LETCommunication((int)coresImplicit.get(0).tasks.get(0).period,
+					 (int)coresImplicit.get(2).tasks.get(0).period,
+					 (int)coresImplicit.get(2).tasks.get(3).period);
              //ExplicitCommunication E2E = new ExplicitCommunication(800,9.844000928,24.272001184000004,2000,3.896001524,39.668002,50000,795.6880232479997,16354.920024780005,16981.936030792007);
              //ExplicitCommunication E2E = new ExplicitCommunication(800,11.210000986666667,20.22666765333333,2000,11.55000166666667,33.056668333333334,50000,677.3266867,12469.11002065,16935.212000000007);
              //ImplicitCommunication MCOP = new ImplicitCommunication(800,0,159.392,9.844,24.272,2000,0,266.468,101.028,323.2680000000001,50000,0, 13122.360000000004,1034.2160000000001,16981.936000000005);
@@ -180,6 +249,11 @@ public class main {
              MCOP.L2FCalculation();
              MCOP.L2LCalculation();
              MCOP.F2FCalculation();
+             
+             System.out.println("LET");
+             LET.L2FCalculation();
+             LET.L2LCalculation();
+             LET.F2FCalculation();
 
       }catch (IOException e) {
              System.out.println(e.getMessage());
